--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "simplebar": "^2.4.4",
     "vue-router": "^2.7.0",
     "vue-router-transition": "^1.0.9"
   }
