--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "moment": "^2.19.1",
+    "vue-on-click-outside": "^1.0.3",
     "vue-router": "^2.7.0",
     "vue-router-transition": "^1.0.9"
   }
 }
- 
